# Esp32Scope

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  adc_reading.cpp  adc_stream.cpp  adc_stream.hpp  application.cpp  application.hpp  compress_web.py  main.cpp  web_server.cpp  web_server.hpp  wifi_station.cpp  wifi_station.hpp
main/proto/: testrequest.js  wsInterface.options  wsInterface.proto
main/webPage/: index.html  main.js  package.json  style.css
