idf_component_register(
    SRCS
        "main.cpp"
        "adc_stream.cpp"
        "web_server.cpp"
        "wifi_station.cpp"
    INCLUDE_DIRS "."
    REQUIRES
        esp_adc
        esp_event
        esp_http_server
        esp_netif
        esp_wifi
        freertos
        nvs_flash
    EMBED_FILES
        "webPage/index.html"
        "webPage/style.css"
        "webPage/main.js"
)
